Made a few changes: (1) Makefile updated to delete .o files in Main/Desine directory while cleanup (2) Added a log message to indicate when Topology has been created (3) Fixed a bug in TopologyFactorySlimNet.cpp to generate correct address for <7,x> series (4) Fixed the algorithm when i_level and j_level are same.

--- a/src/makefile.inc
+++ b/src/makefile.inc
@@ -39,7 +39,7 @@ ALL_OBJS=$(TMP_PKGS:%=$(OBJ_DIR)/%/*.o)
 
 # Optimization Flags
 #FLAGS=-O3 -funroll-loops -finline-functions -fexpensive-optimizations
-FLAGS=-g -funroll-loops -finline-functions -fexpensive-optimizations
+FLAGS=-g -gdwarf-2 # -funroll-loops -finline-functions -fexpensive-optimizations
 
 # Compiler settings
 CFLAGS=$(FLAGS) $(LOCALCFLAGS)
